--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,6 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2"
+    "openai": "^4.10.0"
   }
 }
